WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30732
Pan-scrolling Pointer shows up in other tabs or windows, can't "fix it"
https://bugs.webkit.org/show_bug.cgi?id=30732
Summary
Pan-scrolling Pointer shows up in other tabs or windows, can't "fix it"
Brian Weinstein
Reported
2009-10-23 16:26:36 PDT
<
rdar://7332018
> * SUMMARY When I pen-scroll in tab1, then switch to another tab or window, the pointer still looks like in pen-scrolling mode. Buy that time I forgot that I was pen-scrolling in tab1, and pointer looks confusing, besides I don't know how to fix it: clicking anywhere does no change it. And the only way to "fix" it is to return to tab1 and click in there. This bug happens in 4.0.3 and ToT on Windows * STEPS TO REPRODUCE 1. open tab1 with any page 2. open tab2 with any page 3. in Tab1 middle click to pen scroll 4. click into tab 2, scroll it * RESULTS Pointer in tab2 or in a different Safari window will remain as though I pen-scroll, clicking does not change it. The only way to change it is to click in original tab.
Attachments
Fix
(1.30 KB, patch)
2009-10-23 16:30 PDT
,
Brian Weinstein
sullivan
: review+
bweinstein
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2009-10-23 16:30:02 PDT
Created
attachment 41763
[details]
Fix
Brian Weinstein
Comment 2
2009-10-23 16:46:20 PDT
Landed in
http://trac.webkit.org/changeset/50007
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug