Pan-scrolling pointer shows up in other tabs or windows, can't "fix" it. <http://webkit.org/b/30732> and <rdar://7332018>.

Reviewed by John Sullivan.

Turns off pan-scrolling on a WebView when it is about to lose focus.

* WebView.cpp:
(WebViewWndProc):



Canonical link: https://commits.webkit.org/41461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50007 268f45cc-cd09-0410-ab3c-d52691b4dbfc