WebKit/win/WebView.cpp
@@ -1985,6 +1985,10 @@ static LRESULT CALLBACK WebViewWndProc(HWND hWnd, UINT message, WPARAM wParam, L
             // Send blur events unless we're losing focus to a child of ours.
             if (!IsChild(hWnd, newFocusWnd))
                 focusController->setFocused(false);
+
+            // If we are pan-scrolling when we lose focus, stop the pan scrolling.
+            frame->eventHandler()->stopAutoscrollTimer();
+
             break;
         }
         case WM_WINDOWPOSCHANGED:
